fix(ui): align pages with sidebar shell

--- a/frontend/src/app/features/book/components/series-page/series-page.component.scss
+++ b/frontend/src/app/features/book/components/series-page/series-page.component.scss
@@ -19,13 +19,6 @@
   min-height: 0;
 }
 
-::ng-deep .series-wrapper .p-tabs {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-  min-height: 0;
-}
-
 .series-main {
   display: flex;
   flex-direction: column;
